k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formalert
  namespace: formalert

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    - host: api.jobapp.in

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app
                port:
                  number: 8000
